# photonic

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  docker-compose.yml  flake.nix  flow.puml  medium.http  openapi-3.0.yaml  openapi.json  openapi.yaml  photonic.yaml  rustfmt.toml  setup_kafka.sh  test.json
avro-reference/: Cargo.toml
avro-reference-derive/: Cargo.toml
avro-reference-derive/src/: lib.rs
avro-reference/src/: component.rs  lib.rs  referencable.rs  schema.rs  utils.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/cli/: mod.rs  server.rs
common/: Cargo.toml
common/resources/schemas/: medium_item_created.avsc  medium_item_exif_loaded.avsc
common/resources/schemas/common/: date_time_tz.avsc  storage_location.avsc
common/src/: db.rs  error.rs  lib.rs  server.rs
common/src/config/: database.rs  mod.rs  streams.rs
common/src/domain/: mod.rs
common/src/domain/medium/: mod.rs  updated_event.rs
common/src/domain/medium_item/: created_event.rs  exif_loaded_event.rs  mod.rs
common/src/domain/user/: model.rs  repo.rs
common/src/ksqldb/: error.rs  mod.rs  statement.rs  stream.rs
common/src/ksqldb/types/: common.rs  mod.rs  statement.rs
common/src/medium_item/: mod.rs
common/src/stream/: consumer.rs  mod.rs  producer.rs  schema.rs
common/src/stream/events/: avro_serializations.rs  common.rs  medium_item_created.rs  medium_item_exif_loaded.rs  mod.rs
common/src/user/: mod.rs  repo.rs
core/: Cargo.toml
core/src/: config.rs  lib.rs
core/src/entities/: medium.rs
core/src/errors/: medium.rs  mod.rs
core/src/http/: api.rs  error.rs  mod.rs
core/src/repository/: medium.rs  mod.rs
core/src/service/: create_medium.rs  inputs.rs  mod.rs
core/src/store/: mod.rs  path.rs  path_opts.rs  save.rs
crates/domain/: Cargo.toml
crates/domain/src/: aggregate.rs  error.rs  event.rs  lib.rs  serde_helpers.rs
crates/domain/src/medium/: camera.rs  file.rs  filter.rs  medium.rs  mod.rs  path_service.rs  storage.rs
crates/domain/src/metadata/: metadata.rs
crates/domain/src/shared/: crypto.rs
crates/domain/src/task/: filter.rs  mod.rs  ports.rs  status.rs  task.rs  types.rs
crates/domain/src/user/: quota.rs  user.rs
crates/event_sourcing/: Cargo.toml
crates/event_sourcing/src/: aggregate.rs  lib.rs
crates/event_sourcing/src/aggregate/: event_store.rs  mod.rs  repository.rs  snapshot_store.rs  traits.rs
crates/event_sourcing/src/bus/: event_processor.rs  inmem.rs  mod.rs  notifying_persistent.rs  persistent.rs  projection.rs  subscription.rs
crates/event_sourcing/src/event/: domain_event.rs  event_metadata.rs  event_type.rs  mod.rs  stream.rs
crates/event_sourcing/src/persistence/: aggregate_event_store.rs  checkpoint_store.rs  event_store.rs  listener.rs  mod.rs  notifying_event_store.rs  sequence.rs  stream_link_store.rs  transaction.rs
crates/event_sourcing/src/projection/: handler.rs  mod.rs  stream_linking.rs
crates/event_sourcing/src/stream/: definition.rs  link_store.rs  linking_projection.rs  stream_id.rs
crates/photonic/: Cargo.toml
crates/photonic-client/: Cargo.toml  build.rs
crates/photonic/migrations/: 20240607172749_init.down.sql
crates/photonic/src/: lib.rs  main.rs
crates/photonic/src/application/: error.rs  event_bus.rs  mod.rs
crates/photonic/src/domain/: error.rs  mod.rs
crates/photonic/src/infrastructure/: db.rs  mod.rs  server.rs  stream.rs
crates/photonic/src/shared/: mod.rs  stream.rs  value_objects.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
crates/xtask/src/openapi/: client.rs  convert.rs  generate.rs
exif_service/: Cargo.toml
exif_service/src/: config.rs  exiftool.rs  file_handler.rs  main.rs
exiftool/: Cargo.toml
exiftool/src/: lib.rs
fotonic/: Cargo.toml
fotonic/migrations/2024-02-24-155153_init/: up.sql
fotonic/src/: config.rs  error.rs  lib.rs  main.rs
fotonic/src/cli/: mod.rs  server.rs
fotonic/src/entities/: album.rs  medium.rs  mod.rs
fotonic/src/model/: access.rs  album.rs  medium.rs  mod.rs  trash.rs  user.rs
fotonic/src/repository/: album.rs  medium.rs  mod.rs  to_trash.rs  user.rs
fotonic/src/repository/dto/: medium.rs  medium_item.rs  mod.rs  sidecar.rs
fotonic/src/service/: create_medium.rs  find_all.rs  mod.rs  move_to_trash.rs  raw.rs  user.rs
fotonic/src/store/: mod.rs  path.rs  save.rs
http_server/: Cargo.toml
http_server/src/: config.rs  error.rs  lib.rs  main.rs
http_server/src/api/: info.rs  mod.rs  ping.rs  user.rs
importer_service/: Cargo.toml
importer_service/src/: api.rs  config.rs  main.rs  state.rs
importer_service/src/medium/: api.rs  mod.rs  model.rs  router.rs  service.rs
importer_service/src/medium_item/: model.rs  service.rs
importer_service/src/storage/: stream.rs
kafcars/: Cargo.toml
kafcars/src/: consumer.rs  encoder.rs  error.rs  event.rs  lib.rs  producer.rs
meta/: Cargo.toml
meta/src/: error.rs  lib.rs  metainfo.rs
meta/src/service/: mod.rs
photonic/: Cargo.toml
photonic/migrations/2024-02-24-155153_init/: down.sql  up.sql
photonic/src/: db.rs  error.rs  lib.rs  schema.rs
photonic/src/album/: mod.rs  model.rs  repo.rs  service.rs
photonic/src/common/: mod.rs  model.rs
photonic/src/config/: cache.rs  mod.rs  oauth.rs
photonic/src/medium/: event.rs  mod.rs  model.rs  repo.rs  service.rs
photonic/src/medium_item/: mod.rs  model.rs  repo.rs
photonic/src/model/: medium.rs
photonic/src/repository/: add_medium_item.rs  add_sidecar.rs  album.rs  create_medium.rs  find_medium.rs  medium.rs  mod.rs  to_trash.rs  user.rs
photonic/src/server/: auth.rs  info.rs  mod.rs  routes.rs
photonic/src/service/: add_medium_item.rs  album.rs  create_medium.rs  find_medium.rs  get_raw.rs  mod.rs  move_to_trash.rs  path.rs  raw.rs  stream.rs  user.rs
photonic/src/sidecar/: mod.rs  model.rs  repo.rs
photonic/src/store/: mod.rs  path.rs  save.rs  service.rs  transaction.rs
photonic/src/user/: mod.rs  model.rs  repo.rs  service.rs
server/crates/application/: Cargo.toml
server/crates/infrastructure/: Cargo.toml
server/crates/xtask/: Cargo.toml
(+639 files in other folders)
