[workspace]
members = [
    "exif_service",
    "common",
    "importer_service",
    "storage_service",
    "avro-reference-derive",
    "avro-reference"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.37.0", features = ["fs", "signal", "rt-multi-thread", "process"] }
tokio-util = { version = "0.7.10", features = ["io"] }
futures = "0.3.30"
futures-util = "0.3.30"
future-wrap = "0.1.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
snafu = { version = "0.8.2", features = ["backtrace"] }
serde = { version = "1.0.199", features = ["derive", "serde_derive"] }
serde_json = "1.0.116"
serde_with = "3.8.0"
mime_serde_shim = "0.2.2"
mime = "0.3.17"
derive_setters = "0.1.6"
derive_builder = "0.20.0"
strum = { version = "0.26.3", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
byte-unit = { version = "5.1.4", features = ["serde"] }
bytes = "1.7.2"
chrono = { version = "0.4.38", features = ["serde", "now"] }
path-clean = "1.0.1"
filenamify = "0.1.0"
itertools = "0.13.0"
rdkafka = { version = "0.36.2", features = ["tracing"] }
schema_registry_converter = { version = "4.1.0", features = ["easy", "avro", "tokio"] }
apache-avro = { version = "0.16.0", features = ["derive"] } # Dont update because dependent on schema_registry_converter
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
utoipa = { version = "5.0.0-alpha.0", features = ["axum_extras", "yaml", "chrono", "uuid", "openapi_extensions"] }
utoipa-swagger-ui = { version = "7.1.1-alpha.0", features = ["axum"] }
once_cell = "1.19.0"
confique = "0.2.5"
dotenv = "0.15.0"
jwt-authorizer = "0.15.0"
reqwest = { version = "0.12.8", features = ["json", "stream"], default-features = false }
sqlx = { version = "0.8.0", features = ["runtime-tokio", "postgres", "json", "uuid", "chrono", "macros", "migrate"] }
tower-http = { version = "0.6.1", features = ["trace"] }
lazy_static = "1.5.0"
convert_case = "0.6.0"
pin-project-lite = "0.2.14"
darling = "0.20.10"
proc-macro2 = "1.0.86"
syn = "2.0.79"
quote = "1.0.37"
