[package]
name = "photonic"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "photonic"
path = "src/main.rs"

[dependencies]
photonic_derive = { path = "./photonic_derive" }

tokio = { version = "1.42.0", features = ["fs", "signal", "rt-multi-thread", "process"] }
tokio-util = { version = "0.7.13", features = ["io"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
futures = "0.3.31"
futures-util = "0.3.31"
future-wrap = "0.1.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
snafu = { version = "0.8.5", features = ["backtrace", "futures"] }
serde = { version = "1.0.217", features = ["derive", "serde_derive"] }
serde_json = "1.0.134"
serde_with = "3.12.0"
mime_serde_shim = "0.2.2"
mime = "0.3.17"
derive_setters = "0.1.6"
derive_builder = "0.20.2"
strum = { version = "0.26.3", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
byte-unit = { version = "5.1.6", features = ["serde"] }
bytes = "1.9.0"
chrono = { version = "0.4.39", features = ["serde", "now"] }
path-clean = "1.0.1"
filenamify = "0.1.2"
itertools = "0.13.0"
axum = { version = "0.7.9", features = ["macros"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
utoipa = { version = "5.3.0", features = ["axum_extras", "yaml", "chrono", "uuid", "openapi_extensions"] }
utoipa-swagger-ui = { version = "8.1.0", features = ["axum"] }
utoipa-axum = { version = "0.1.3" }
once_cell = "1.20.2"
confique = "0.3.0"
dotenv = "0.15.0"
jwt-authorizer = "0.15.0"
reqwest = { version = "0.12.11", features = ["json", "stream"], default-features = false }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "json", "uuid", "chrono", "macros", "migrate"] }
tower-http = { version = "0.6.2", features = ["trace"] }
lazy_static = "1.5.0"
convert_case = "0.6.0"
pin-project-lite = "0.2.15"
darling = "0.20.10"
proc-macro2 = "1.0.92"
syn = "2.0.93"
quote = "1.0.38"
async-stream = "0.3.6"
opentelemetry = "0.27.1"
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
opentelemetry-otlp = "0.27.0"
tracing-opentelemetry = "0.28.0"
