[workspace]
resolver = "2"
members = ["crates/application", "crates/domain", "crates/event_sourcing",
    "crates/infrastructure",
    "crates/photonic-client",
    "crates/xtask",
]
default-members = [
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
]

[workspace.package]
version = "0.1.0"
authors = ["Max Vissing"]
edition = "2021"

[workspace.dependencies]
# Internal crates
domain = { path = "crates/domain" }
application = { path = "crates/application" }
infrastructure = { path = "crates/infrastructure" }
photonic-client = { path = "crates/photonic-client" }
xtask = { path = "crates/xtask" }

# Async runtime & utilities
tokio = { version = "1.47.1", features = ["fs", "signal", "rt-multi-thread", "process", "tracing", "macros"] }
tokio-util = { version = "0.7.16", features = ["io"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
futures = "0.3.31"
futures-util = "0.3.31"
future-wrap = "0.1.1"
async-trait = "0.1.89"
async-channel = "2.5.0"
async-stream = "0.3.6"

# Tracing & observability
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
opentelemetry = "0.27.1"
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
opentelemetry-otlp = "0.27.0"
tracing-opentelemetry = "0.28.0"

# Error handling
snafu = { version = "0.8.9", features = ["backtrace", "futures"] }

# Serialization
serde = { version = "1.0.226", features = ["derive", "serde_derive"] }
serde_json = "1.0.145"
serde_with = "3.14.1"
serde_yaml = "0.9"
serde_html_form = "0.2"
serde_default_utils = "0.3.1"

# Web framework
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie", "query"] }
tower-http = { version = "0.6.6", features = ["trace"] }
reqwest = { version = "0.12.23", features = ["json", "stream"], default-features = false }

# OpenAPI & code generation
utoipa = { version = "5.4.0", features = ["axum_extras", "yaml", "chrono", "uuid", "openapi_extensions"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
utoipa-axum = { version = "0.2" }
progenitor = "0.8"
progenitor-client = "0.8"
openapiv3 = "2.0"
prettyplease = "0.2"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "json", "uuid", "chrono", "macros", "migrate"] }

# Authentication
jwt-authorizer = { git = "https://github.com/blablacio/jwt-authorizer", branch = "axum-0.8+custom-token-extractor" }

# Configuration
confique = "0.3.1"
dotenv = "0.15.0"

# Common types & utilities
uuid = { version = "1.19.0", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4.42", features = ["serde", "now"] }
bytes = "1.10.1"
byte-unit = { version = "5.1.6", features = ["serde"] }
mime = "0.3.17"
mime_serde_shim = "0.2.2"
mime_guess = "2.0.5"
regex = "1"
base64 = "0.22"
sha2 = "0.10.9"
hex = "0.4.3"
once_cell = "1.21.3"
lazy_static = "1.5.0"
itertools = "0.13.0"
path-clean = "1.0.1"
filenamify = "0.1.2"
convert_case = "0.6.0"
ammonia = "4"
validator = { version = "0.18", features = ["derive"] }

# Derive macros
derive_setters = "0.1.8"
derive_builder = "0.20.2"
derive-new = "0.7.0"
derive-getters = "0.5.0"
strum = { version = "0.26.3", features = ["derive"] }

# Proc macro utilities
proc-macro2 = "1.0.101"
syn = { version = "2.0.106", features = ["full"] }
quote = "1.0.40"
darling = "0.20.11"
pin-project = "1.1.10"
pin-project-lite = "0.2.16"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Testing
mockall = "0.13"
tokio-test = "0.4"
proptest = "1.6"
rstest = "0.24"
fake = "3.0"
wiremock = "0.6"
tempfile = "3.10"
tower = { version = "0.4", features = ["util"] }
insta = "1.41"
serial_test = "3.2"
jsonwebtoken = "9.3"
test-log = { version = "0.2", features = ["trace"] }

[workspace.metadata.crane]
name = "infrastructure"
