[package]
name = "avro-reference"
version = "0.1.0"
edition = "2021"

[dependencies]
avro-reference-derive = { path = "../avro-reference-derive" }

apache-avro = { workspace = true }
chrono = { workspace = true }
byte-unit = { workspace = true }
mime_serde_shim = { workspace = true }
uuid = { workspace = true }
