[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
fotonic = { path = "../fotonic" }
http_server = { path = "../http_server" }
exiftool = { path = "../exiftool" }
meta = { path = "../meta" }

clap = { version = "4.4.14", features = ["cargo"] }
dotenv = "0.15.0"
tokio = "1.35.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
snafu = "0.8.0"
