[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
avro-reference = { path = "../avro-reference" }

serde = { workspace = true }
serde_json = { workspace = true }
derive_builder = { workspace = true }
strum = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rdkafka = { workspace = true }
schema_registry_converter = { workspace = true }
apache-avro = { workspace = true }
snafu = { workspace = true, features = ["futures"] }
axum = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
future-wrap = { workspace = true }
chrono = { workspace = true }
mime = { workspace = true }
mime_serde_shim = { workspace = true }
confique = { workspace = true }
byte-unit = { workspace = true }
jwt-authorizer = { workspace = true }
sqlx = { workspace = true }
lazy_static = { workspace = true }
convert_case = { workspace = true }
reqwest = { workspace = true }
pin-project-lite = { workspace = true }
bytes = { workspace = true }
utoipa = { workspace = true }
darling = { workspace = true }
proc-macro2 = { workspace = true }
