[package]
name = "exif_service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "exif_service"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
snafu = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
mime_serde_shim = { workspace = true }
confique = { workspace = true }
dotenv = { workspace = true }
axum = { workspace = true }
mime = { workspace = true }
chrono = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true }
