[package]
name = "exiftool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["serde_derive", "derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["io-util", "process", "sync", "rt", "rt-multi-thread", "macros"] }
log = "0.4.20"
once_cell = "1.19.0"
itertools = "0.12.1"
snafu = { version = "0.8.0", features = ["backtrace"] }
