[package]
name = "fotonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meta = { path = "../meta" }

chrono = { version = "0.4.30", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive", "serde_derive"] }
mongodb = { version = "2.8.0", features = ["bson-chrono-0_4"] }
derive_more = "0.99.17"
mime = "0.3.17"
tokio = { version = "1.35.1", features = ["fs"] }
path-clean = "1.0.1"
serde_json = "1.0.111"
mime_serde_shim = "0.2.2"
derive_setters = "0.1.6"
futures-util = "0.3.28"
log = "0.4.20"
axum = "0.7.3"
uuid = { version = "1.4.1", features = ["v4"] }
tokio-util = "0.7.8"
futures = "0.3.30"
tracing = "0.1.40"
snafu = { version = "0.8.0", features = ["backtrace"] }
