[package]
name = "fotonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meta = { path = "../meta" }

chrono = { version = "0.4.33", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive", "serde_derive"] }
mongodb = { version = "2.8.0", features = ["bson-chrono-0_4", "bson-serde_with"] }
serde_with = "3.6.0"
derive_more = "0.99.17"
mime = "0.3.17"
tokio = { version = "1.36.0", features = ["fs"] }
path-clean = "1.0.1"
serde_json = "1.0.113"
mime_serde_shim = "0.2.2"
derive_setters = "0.1.6"
futures-util = "0.3.30"
log = "0.4.20"
axum = "0.7.4"
uuid = { version = "1.7.0", features = ["v4"] }
tokio-util = "0.7.10"
futures = "0.3.30"
tracing = "0.1.40"
snafu = { version = "0.8.0", features = ["backtrace"] }
bson = { version = "2.9.0", features = ["chrono-0_4", "serde_with-3"] }
filenamify = "0.1.0"
