[package]
name = "fotonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meta = { path = "../meta" }

chrono = { version = "0.4.35", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive", "serde_derive"] }
serde_with = "3.7.0"
derive_more = "0.99.17"
mime = "0.3.17"
tokio = { version = "1.36.0", features = ["fs"] }
path-clean = "1.0.1"
serde_json = "1.0.114"
mime_serde_shim = "0.2.2"
derive_setters = "0.1.6"
futures-util = "0.3.30"
log = "0.4.21"
axum = "0.7.4"
uuid = { version = "1.8.0", features = ["v4"] }
tokio-util = "0.7.10"
futures = "0.3.30"
tracing = "0.1.40"
snafu = { version = "0.8.2", features = ["backtrace"] }
filenamify = "0.1.0"
diesel = { version = "2.1.5", features = ["postgres", "chrono", "uuid"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
deadpool-diesel = { version = "0.5.0", features = ["postgres", "serde", "tracing"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
itertools = "0.12.1"
