[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
photonic = { path = "../photonic" }

chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.3"
mime_serde_shim = "0.2.2"
serde = { version = "1.0.199", features = ["derive"] }
uuid = { version = "1.8.0", features = ["serde", "v8"] }
axum = { version = "0.7.5", features = ["query", "tracing"] }
hyper = "1.3.1"
tokio = { version = "1.37.0", features = ["signal"] }
tracing = "0.1.40"
tower-http = { version = "0.5.2", features = ["trace"] }
futures = "0.3.30"
tokio-util = "0.7.10"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
snafu = "0.8.2"
mime = "0.3.17"
jwt-authorizer = "0.14.0"
byte-unit = { version = "5.1.4", features = ["serde"] }
