[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
photonic = { path = "../photonic" }

dotenv = "0.15.0"
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.3"
mime_serde_shim = "0.2.2"
serde = { version = "1.0.204", features = ["derive"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
axum = { version = "0.7.5", features = ["query", "tracing"] }
hyper = "1.4.1"
tokio = { version = "1.38.0", features = ["signal"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.5.2", features = ["trace"] }
futures = "0.3.30"
tokio-util = "0.7.11"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
snafu = "0.8.4"
mime = "0.3.17"
jwt-authorizer = "0.14.0"
byte-unit = { version = "5.1.4", features = ["serde"] }
utoipa = { version = "5.0.0-alpha.0", features = ["axum_extras", "yaml", "chrono", "uuid", "openapi_extensions"] }
utoipa-swagger-ui = { version = "7.1.1-alpha.0", features = ["axum"] }
utoipa-redoc = { version = "4.0.1-alpha.0", features = ["axum"] }
