[package]
name = "importer_service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "importer_service"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }

tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
jwt-authorizer = { workspace = true }
snafu = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
confique = { workspace = true }
dotenv = { workspace = true }
futures = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
mime = { workspace = true }
mime_serde_shim = { workspace = true }
byte-unit = { workspace = true }
reqwest = { workspace = true }
