[package]
name = "meta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exiftool = { path = "../exiftool" }

chrono = "0.4.33"
infer = "0.15.0"
kamadak-exif = "0.5.5"
mime = "0.3.17"
log = "0.4.20"
mime_guess = "2.0.4"
futures = "0.3.30"
snafu = { version = "0.8.0", features = ["backtrace"] }
tracing = "0.1.40"
serde_json = "1.0.113"
