[package]
name = "photonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
mime = { workspace = true }
tokio = { workspace = true }
path-clean = { workspace = true }
serde_json = { workspace = true }
mime_serde_shim = { workspace = true }
derive_setters = { workspace = true }
futures-util = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
snafu = { workspace = true }
filenamify = { workspace = true }
itertools = { workspace = true }
sqlx = { workspace = true }
tower-http = { workspace = true }
jwt-authorizer = { workspace = true }
byte-unit = { workspace = true }
rdkafka = { workspace = true }
schema_registry_converter = { workspace = true }
apache-avro = { workspace = true }
reqwest = { workspace = true }
