[package]
name = "domain"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
byte-unit.workspace = true
chrono.workspace = true
derive_builder.workspace = true
derive-new.workspace = true
mime.workspace = true
snafu.workspace = true
strum.workspace = true
uuid.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["fs"] }
hex.workspace = true
