[package]
name = "event_sourcing"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
snafu.workspace = true
futures-util.workspace = true
tokio = { workspace = true, default-features = false, features = ["sync"] }
tokio-util.workspace = true
tokio-stream.workspace = true
async-channel.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
