[package]
name = "photonic-client"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
progenitor-client = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }

[build-dependencies]
xtask = { path = "../xtask" }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
