[package]
name = "photonic-client"
version.workspace = true
authors.workspace = true
edition = "2024"

[dependencies]
chrono.workspace = true
progenitor-client.workspace = true
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
uuid.workspace = true

[build-dependencies]
xtask = { workspace = true }
tokio.workspace = true