[package]
name = "photonic"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "photonic"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.89"
async-channel = "2.5.0"
tokio = { version = "1.47.1", features = ["fs", "signal", "rt-multi-thread", "process", "tracing"] }
tokio-util = { version = "0.7.16", features = ["io"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
futures = "0.3.31"
futures-util = "0.3.31"
future-wrap = "0.1.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
snafu = { version = "0.8.9", features = ["backtrace", "futures"] }
serde = { version = "1.0.226", features = ["derive", "serde_derive"] }
serde_json = "1.0.145"
serde_with = "3.14.1"
mime_serde_shim = "0.2.2"
mime = "0.3.17"
derive_setters = "0.1.8"
derive_builder = "0.20.2"
strum = { version = "0.26.3", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4", "v5", "serde"] }
byte-unit = { version = "5.1.6", features = ["serde"] }
bytes = "1.10.1"
chrono = { version = "0.4.42", features = ["serde", "now"] }
path-clean = "1.0.1"
filenamify = "0.1.2"
itertools = "0.13.0"
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie", "query"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "yaml", "chrono", "uuid", "openapi_extensions"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
utoipa-axum = { version = "0.2" }
once_cell = "1.21.3"
confique = "0.3.1"
dotenv = "0.15.0"
jwt-authorizer = { git = "https://github.com/blablacio/jwt-authorizer", branch = "axum-0.8+custom-token-extractor" }
reqwest = { version = "0.12.23", features = ["json", "stream"], default-features = false }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "json", "uuid", "chrono", "macros", "migrate"] }
tower-http = { version = "0.6.6", features = ["trace"] }
lazy_static = "1.5.0"
convert_case = "0.6.0"
pin-project-lite = "0.2.16"
darling = "0.20.11"
proc-macro2 = "1.0.101"
syn = "2.0.106"
quote = "1.0.40"
async-stream = "0.3.6"
opentelemetry = "0.27.1"
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
opentelemetry-otlp = "0.27.0"
tracing-opentelemetry = "0.28.0"
validator = { version = "0.18", features = ["derive"] }
serde_html_form = "0.2"
ammonia = "4"
base64 = "0.22"
regex = "1"
sha2 = "0.10.9"
hex = "0.4.3"
mime_guess = "2.0.5"
derive-new = "0.7.0"
derive-getters = "0.5.0"
serde_default_utils = "0.3.1"
pin-project = "1.1.10"

[dev-dependencies]
mockall = "0.13"
tokio-test = "0.4"
proptest = "1.6"
rstest = "0.24"
fake = "3.0"
wiremock = "0.6"
tempfile = "3.10"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tower = { version = "0.4", features = ["util"] }
insta = "1.41"
serial_test = "3.2"
jsonwebtoken = "9.3"
test-log = { version = "0.2", features = ["trace"] }
photonic-client = { path = "../photonic-client" }

[build-dependencies]
progenitor = "0.8"
syn = { version = "2.0", features = ["full"] }
prettyplease = "0.2"
openapiv3 = "2.0"
serde_yaml = "0.9"
