[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
photonic = { path = "../photonic" }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.5", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "json", "uuid", "chrono", "macros", "migrate"] }
snafu = "0.8.9"
serde_yaml = "0.9"
progenitor = "0.8"
prettyplease = "0.2"
openapiv3 = "2.0"
syn = { version = "2.0", features = ["full"] }
