[package]
name = "application"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
domain = { workspace = true }
event_sourcing = { workspace = true }

async-trait.workspace = true
byte-unit.workspace = true
chrono.workspace = true
derive-new.workspace = true
mime.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
