[package]
name = "xtask"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
infrastructure = { workspace = true }
tokio.workspace = true
clap.workspace = true
sqlx.workspace = true
snafu.workspace = true
serde_yaml.workspace = true
progenitor.workspace = true
prettyplease.workspace = true
openapiv3.workspace = true
syn.workspace = true